--- a/css/editor.css
+++ b/css/editor.css
@@ -78,3 +78,18 @@ fieldset > legend{
     display: inline;
     color: red;
 }
+
+input[type='radio'] {
+    box-sizing: border-box;
+    appearance: none;
+    background: white;
+    outline: 2px solid #333;
+    border: 3px solid white;
+    width: 16px;
+    height: 16px;
+}
+
+input[type='radio']:checked {
+    background: #333;
+  }
+  
