fixed so much stuff i can't list all + almost finished EK calc

--- a/src/template/trainereditor.html
+++ b/src/template/trainereditor.html
@@ -96,6 +96,7 @@
                         <label for="trainer-edition-name">Trainer name: </label>
                         <input type="text" name="trainer-edition-name" id="trainer-edition-name" autocomplete="off">
                     </div>
+                    <button id="tag-optionnal">Tag as Optionnal</button>
                     <hr>
                     <input type="text" class="set-selector opposing save-trigger" />
                     <span style="width:auto">
@@ -657,7 +658,7 @@
                     <li>Boosts, HP aren't saved</li>
                 </ul>
             </p>
-            version 0.0.2 Fixed first release to any public
+            version 0.0.1 First release to any public
         </div>
     </div>
     <script type="text/javascript" src="../js/vendor/jquery-1.9.1.min.js"></script>
