--- a/src/template/index.html
+++ b/src/template/index.html
@@ -699,20 +699,22 @@
         </div>
         <div aria-label="trainer-poks" role="region">
             <fieldset class="poke-info" id="trainer-mons">
-                <legend align="center">TEAM/BOX</legend>
+                <legend align="center">Team/Box</legend>
                 <div>
-                    <legend class="dropzone" align="center">TEAM</legend>
+                    <legend class="dropzone" align="center">Team</legend>
                     <div id="team-poke-list" class="box-poke dropzone">
                     </div>
                 </div>
                 <hr>
                 <div>
-                    <legend class="dropzone" align="center">BOX</legend>
+                    <legend class="dropzone" align="center">Box 1
+                        <button id="rebox">Rebox all here</button>
+                    </legend>
                     <div id="box-poke-list" class="box-poke dropzone">
                     </div>
                 </div>
                 <div>
-                    <legend class="dropzone" align="center">BOX 2</legend>
+                    <legend class="dropzone" align="center">Box 2</legend>
                     <div id="box-poke-list2" class="box-poke dropzone">
                     </div>
                 </div>
@@ -761,12 +763,12 @@
                 </div>
                 <hr>
                 <div>
-                    <legend class="dropzone" align="center">TRASH ZONE</legend>
+                    <legend class="dropzone" align="center">Trash zone</legend>
                     <div id="trash-box" class="box-poke dropzone" data-placeholder="">
                         
                     </div>
-                    <button class="deadzone" id="trash-pok">Remove pokemon in the Trash</button>
-                    <button class="deadzone" id="clearSets">Remove all pokemons from all boxes</button>
+                    <button class="deadzone" id="trash-pok">Delete pokemon in the Trash</button>
+                    <button class="deadzone" id="clearSets">Delete all of trainers pokemons</button>
                 </div>
             </fieldset>
         </div>
