reunification scripts works now instead of trying to kill me

--- a/src/template/index.html
+++ b/src/template/index.html
@@ -707,7 +707,7 @@
                 </div>
                 <hr>
                 <div>
-                    <legend class="dropzone" align="center">Box 1
+                    <legend class="dropzone" align="center">Box
                         <button id="rebox">Rebox all here</button>
                     </legend>
                     <div id="box-poke-list" class="box-poke dropzone">
@@ -767,8 +767,8 @@
                     <div id="trash-box" class="box-poke dropzone" data-placeholder="">
                         
                     </div>
-                    <button class="deadzone" id="trash-pok">Delete pokemon in the Trash</button>
-                    <button class="deadzone" id="clearSets">Delete all of trainers pokemons</button>
+                    <button class="deadzone" id="trash-pok">Remove pokemon in the Trash</button>
+                    <button class="deadzone" id="clearSets">Remove all pokemons from all boxes</button>
                 </div>
             </fieldset>
         </div>
@@ -1881,8 +1881,8 @@
         <button id="side-arrow-toggle" data-id="true">Show Side Arrows</button>
         <button id="double-legacy-mode">Doubles Modern</button>
     </div>
-</div>
-
+</div> 
+version 0.0.3 "I'm too impatient"
 <div id="note-box-frame" class="box-frame" hidden>
     <div class="box-frame-header" data-x="1220"data-y="200">
         <legend>Notes</legend>
