changed a bit the item selection

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -821,6 +821,6 @@ table.field {
     margin-right: 41px;
 }
 
-.box-item-list > img:hover {
+.ic:hover {
     background: var(--button-hover);
   }
