--- a/src/template/index.html
+++ b/src/template/index.html
@@ -24,8 +24,7 @@
 
 <body class="dark-theme">
 
-<div class="wrapper">
-
+<div class="wrapper"></div>
     <div aria-label="Settings" role="region">
         <span class="title-text">Pok&eacute;mon Damage Calculator</span>
         <button id="screen-calc">
@@ -1769,6 +1768,7 @@
     <div id="sets">
         <button type="button" id="dark-theme-toggle"></button>
         <script type="text/javascript" src="../js/dark-theme-toggle.js?"></script>
+        <button id="">Open settings Menu</button>
         <button id="side-arrow-toggle" data-id="true">Show Side Arrows</button>
         <button id="double-legacy-mode">Doubles Modern</button>
     </div>
