--- a/src/css/dark-theme.css
+++ b/src/css/dark-theme.css
@@ -8,7 +8,7 @@
     --button-hover: black;
     --button-selected: #232e51;
     --fieldset-color: #2a2a2a;
-
+    --background-image: linear-gradient(#333, 70%, #1b1b1b);
     --column-1: #2a2a2a;
 }
 
@@ -31,7 +31,7 @@ a.links-lighten:visited:hover {
 
 .select2-container .select2-choice {
     background: var(--background);
-    background-image: linear-gradient(#333, 70%, #1b1b1b);
+    background-image: var(--background-image);
     /* Not fully satisfied w/ this gradient, but it's w/e */
     color: var(--text);
 }
