reworked the colors a bit, to my taste

--- a/src/template/trainereditor.html
+++ b/src/template/trainereditor.html
@@ -11,7 +11,7 @@
     <link type="text/css" rel="stylesheet" href="../css/basic-theme.css">
     <link type="text/css" rel="stylesheet" href="../css/dark-theme.css" id="dark-theme-styles">
     <link type="text/css" rel="stylesheet" href="../css/light-theme.css" id="light-theme-styles">
-    <link type="text/css" rel="stylesheet" href="../css/forest-theme.css" id="other-theme-styles">
+    <link type="text/css" rel="stylesheet" href="../css/forest-theme.css" id="forest-theme-styles">
 </head>
 
 <body class="wrapper">
