--- a/css/main.css
+++ b/css/main.css
@@ -225,7 +225,7 @@ th {
     font-size: 0.8em;
 }
 .panel {
-    float: left;
+    float: left; /* I like how my IDE yells me its an error*/
     display: inline-block; /* required for honkaculate to work */
 }
 .poke-info {
@@ -651,6 +651,7 @@ table.field {
     position: absolute;
     border: none;
     background-color: rgba(250, 235, 215, 0);
+    background-image: none;
 }
 .side-pannel{
     display: grid;
@@ -821,6 +822,53 @@ table.field {
     margin-right: 41px;
 }
 
-.box-item-list > img:hover {
+.ic:hover {
     background: var(--button-hover);
-  }
+}
+
+#settings-menu {
+	background-color: var(--background);
+	width: 50em;
+	z-index: 8;
+	position: fixed;
+	min-height: fit-content;
+	/* margin: auto; */
+	left: 0;
+	right: 0;
+	margin-left: auto;
+	margin-right: auto;
+    padding: 10px;
+    border: solid;
+}
+#settings-box{
+    background-color: var(--fieldset-color);
+    padding-bottom: 20px;
+}
+
+.settings-row {
+	padding-left: 10px;
+	padding-top: 10px;
+    font-size: 12pt;
+}
+.settings-row> span{
+    font-weight: bold;
+    padding-right: 10px;
+}
+
+input[type='radio'] {
+    box-sizing: border-box;
+    appearance: none;
+    background: white;
+    outline: 2px solid #333;
+    border: 3px solid white;
+    width: 16px;
+    height: 16px;
+}
+
+input[type='radio']:checked {
+    background: var(--button-selected);
+}
+
+input, select, button, .btn{
+    
+}
