--- a/template/index.html
+++ b/template/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <title>Pok&eacute;mon Damage Calculator</title>
     <link type="text/css" rel="stylesheet" href="../js/vendor/select2/select2.css" />
-    <link type="text/css" rel="stylesheet" href="../css/main.css?" />
+    <link type="text/css" rel="stylesheet" href="../css/main.css" />
     <link type="text/css" rel="stylesheet" href="../css/vendor/bootstrap.css" />
     <link type="text/css" rel="stylesheet" href="../css/basic-theme.css">
     <link type="text/css" rel="stylesheet" href="../css/dark-theme.css" id="dark-theme-styles">
@@ -1782,9 +1782,9 @@
     <script type="text/javascript" src="./data/calc_settings.js"></script>
     <script type="text/javascript" src="./cs_pre_load.js"></script>
     <script type="text/javascript" src="../js/settings_controls.js"></script>
-    <script type="text/javascript" src="../js/shared_controls.js?"></script>
-    <script type="text/javascript" src="../js/index_randoms_controls.js?"></script>
-    <script type="text/javascript" src="../js/moveset_import.js?"></script>
+    <script type="text/javascript" src="../js/shared_controls.js"></script>
+    <script type="text/javascript" src="../js/index_randoms_controls.js"></script>
+    <script type="text/javascript" src="../js/moveset_import.js"></script>
     <script type="text/javascript" src="./cs_after_load.js"></script>
     <script type="text/javascript" src="../js/items_control.js"></script>
     <script type="text/javascript" src="../js/side_arrows_controls.js"></script>
