Fixed 1 v 2 intimidate && air lock

--- a/src/css/basic-theme.css
+++ b/src/css/basic-theme.css
@@ -47,7 +47,7 @@ input {
 }
 
 textarea {
-    background-image: var(--background-image);
+    background-color: var(--background);
     color: var(--text);
 }
 
