--- a/template/trainereditor.html
+++ b/template/trainereditor.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <title>UNC Pok&eacute;mon Calculator Trainer Editor </title>
     <link type="text/css" rel="stylesheet"href="../js/vendor/select2/select2.css" />
-    <link type="text/css" rel="stylesheet"href="../css/main.css" />
+    <link type="text/css" rel="stylesheet"href="../css/main.css?" />
     <link type="text/css" rel="stylesheet"href="../css/editor.css" />
     <link type="text/css" rel="stylesheet"href="../css/vendor/bootstrap.css" />
     <link type="text/css" rel="stylesheet" href="../css/basic-theme.css">
