--- a/css/main.css
+++ b/css/main.css
@@ -923,3 +923,8 @@ input[type='radio']:checked {
 #berry-hpL, #berry-hpR{
     display: inline;
 }
+
+.pokebar-selection-specifier{
+    width: auto;
+    display: inline;
+}
