--- a/template/index.html
+++ b/template/index.html
@@ -1904,7 +1904,7 @@
     </ul>
     <button id="open-settings-box">Open Settings Panel</button>
     <div id="sets">
-        <span>version 0.2.1 "I hope its stable today <-- clueless"</span>
+        <span>version 0.2.2 "i hate testing, i hate testing, i hate testing"</span>
     </div>
     
 </div> 
