--- a/src/css/main.css
+++ b/src/css/main.css
@@ -934,3 +934,12 @@ input[type='radio']:checked {
 #hidden-power{
     display: inline;
 }
+
+.text-unselectable{
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
