--- a/src/template/index.html
+++ b/src/template/index.html
@@ -1879,6 +1879,9 @@
             <div id="calcadd-result">
                 Click add to add the selected move.
             </div>
+            <div>
+                Lowest of lowests - median of medians, - highest of highests %;
+            </div>
         </div>
     </div>
     <script type="text/javascript">
@@ -1924,6 +1927,7 @@
     <script type="text/javascript" src="./cs_pre_load.js"></script>
     <script type="text/javascript" src="../js/settings_controls.js"></script>
     <script type="text/javascript" src="../js/shared_controls.js?"></script>
+    <script type="text/javascript" src="../js/colorcoding.js"></script>
     <script type="text/javascript" src="../js/index_randoms_controls.js?"></script>
     <script type="text/javascript" src="../js/moveset_import.js?"></script>
     <script type="text/javascript" src="../js/move_addition.js"></script>
