--- a/src/css/editor.css
+++ b/src/css/editor.css
@@ -96,3 +96,7 @@ input[type='radio']:checked {
 #edition-rename-trainer{
     width: 20em !important;
 }
+
+#trainer-search{
+    width: 20em !important;
+}
